# mcp-server-qnap-qvs

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml  qpkg.yml
qpkg/: Dockerfile.builder  package_routines  qpkg.cfg  repo.xml
qpkg/shared/: .env.example  docker-compose.yml  mcp-server-qnap-qvs.sh
src/mcp_server_qnap_qvs/: config.py  config_ui.py  qvs_client.py  server.py
src/mcp_server_qnap_qvs/config_ui/: __init__.py  auth.py  constants.py  handler.py  helpers.py  pages.py  styles.py
tests/: test_server.py
