[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-qnap-qvs"
version = "0.5.7"
description = "MCP server for QNAP Virtualization Station (QVS) - manage virtual machines, snapshots, and disks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "qnap", "virtualization-station", "qvs", "virtual-machines", "nas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/arnstarn/mcp-server-qnap-qvs"
Repository = "https://github.com/arnstarn/mcp-server-qnap-qvs"

[project.scripts]
mcp-server-qnap-qvs = "mcp_server_qnap_qvs.server:main"
mcp-qvs-config-ui = "mcp_server_qnap_qvs.config_ui:main"
# Legacy single-file entry point removed — now uses config_ui package

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
